# english-odia-speaking-practice

./: .gitignore  License.md  README.md  main.py  pyproject.toml  speak_english_word.py
app/: quiz.py  see.py
data/: adjective.csv  animals.csv  classroom-objects.csv  family.csv  home-actions.csv  polite-word.csv  prepositions.csv  school-actions.csv  test_data.txt
data/alpha-verbs/: a.csv  b.csv  c.csv  d.csv  e.csv  f.csv  g.csv  h.csv  i.csv  j.csv  k.csv  l.csv  m.csv  n.csv  o.csv  p.csv  q.csv  r.csv  s.csv  t.csv  u.csv  v.csv  w.csv  x.csv  y.csv  z.csv
data/category/: body-part.csv  colour.csv  daily-actions.csv  fruits.csv  house-objects.csv  noun-word.csv  play-actions.csv  questions-sentences.csv  small-sentences.csv
data/text/: one-lakhs-english-words-formatted.txt  only-english-word.txt
notebooks/: 01-test-speech.ipynb  02-sweetable-voice.ipynb  03-get-random-word.ipynb  04-select-english-word.ipynb  05-memory-efficiently .ipynb  test.py
